Added txt file as guide to plan out sections of site

--- a/index.html
+++ b/index.html
@@ -24,11 +24,23 @@
 
 <body>
 
-  <header></header>
+  <header>
+    <!-- Logo, name -->
+    <!-- Navigation bar. Fix on top of screen-->
+    <!-- Background Image? -->
+  </header>
 
-  <main></main>
+  <main>
+    <!-- Image? -->
+    <!-- Welcome text as per old site -->
+    <!--  -->
+  </main>
 
-  <footer></footer>
+  <footer>
+    <!-- contact form, or just link to contact page? -->
+    <!-- Policy -->
+    <!-- Copyright -->
+  </footer>
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
