Started filling in basic code for landing page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Bob Wilber</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -25,21 +25,40 @@
 <body>
 
   <header>
-    <!-- Logo, name -->
-    <!-- Navigation bar. Fix on top of screen-->
-    <!-- Background Image? -->
+    <div class="content-wrapper">
+      <!-- Logo, name -->
+      <h3>Bob Wilber</h3>
+      <!-- Navigation bar. Fix on top of screen-->
+      <nav id="navbar">
+        <ul class="navigation">
+          <li>About</li>
+          <li>Media</li>
+          <li>Written</li>
+          <li>Contact</li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <main>
-    <!-- Image? -->
-    <!-- Welcome text as per old site -->
-    <!--  -->
+    <div class="content">
+      <div class="content-wrapper">
+        <h4>Hey there!</h4>
+        <p>Welcome Text Here</p>
+      </div>
+    </div>
   </main>
 
   <footer>
-    <!-- contact form, or just link to contact page? -->
-    <!-- Policy -->
-    <!-- Copyright -->
+    <div class="content-wrapper">
+      <h4 class="contact">
+        Contact us here
+      </h4>
+      <p>Policies</p>
+      <div class="copyright">
+        <p>Copyright 2022 | <a href="nikpayton.tech" target="_blank">Nik Payton</a></p>
+      </div>
+    </div>
   </footer>
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
