Corrected copyright link to my portfolio site

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </h4>
       <p>Policies</p>
       <div class="copyright">
-        <p>Copyright 2022 | <a href="nikpayton.tech" target="_blank">Nik Payton</a></p>
+        <p>Copyright 2022 | <a href="http://nikpayton.tech" target="_blank">Nik Payton</a></p>
       </div>
     </div>
   </footer>
