Changed copyright link. Added some comments re nav bar

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <!-- Logo, name -->
       <h3>Bob Wilber</h3>
       <!-- Navigation bar. Fix on top of screen-->
+      <!-- Add dropdown for media and written -->
       <nav id="navbar">
         <ul class="navigation">
           <li>About</li>
@@ -44,7 +45,9 @@
     <div class="content">
       <div class="content-wrapper">
         <h4>Hey there!</h4>
-        <p>Welcome Text Here</p>
+        <p>Come on in, grab a drink, and make yourself at home.
+          If you are already a fan of Bob Wilber, then his music needs no introduction. If you’re not, then please have a look around, read a few articles, listen to some music, and enjoy the relaxed sophistication of Bob's recordings and compositions.
+          This site is a work in progress, so if something isn’t up and running yet, please be patient. We will add more content when time and availability allow. If you have photos or memorabilia of Bob, and would like to send them to us for consideration, please get in touch via the contact page.</p>
       </div>
     </div>
   </main>
@@ -56,7 +59,7 @@
       </h4>
       <p>Policies</p>
       <div class="copyright">
-        <p>Copyright 2022 | <a href="http://nikpayton.tech" target="_blank">Nik Payton</a></p>
+        <p><a href="http://nikpayton.tech" target="_blank">Copyright 2022 | Nik Payton</a></p>
       </div>
     </div>
   </footer>
