--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html class="no-js" lang="">
 
 <head>
   <meta charset="utf-8">
-  <title>Bob Wilber</title>
+  <title>Unplugged | Home</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -16,53 +16,142 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
-
+  <script src="https://kit.fontawesome.com/0d89128a85.js" crossorigin="anonymous"></script>
   <meta name="theme-color" content="#fafafa">
 </head>
 
+  <!-- Add your site or application content here -->
+
 <body>
 
-  <header>
-    <div class="content-wrapper">
-      <nav id="navbar">
-        <!-- Logo, name -->
-        <h3>Bob Wilber</h3>
-        <!-- Navigation bar. Fix on top of screen-->
-        <!-- Add dropdown for media and written -->
-        <ul class="navigation">
-          <li>About</li>
-          <li>Media</li>
-          <li>Written</li>
-          <li>Contact</li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+    <header>
+      <div class="content-wrapper">
+        <figure>
+          <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo" /></a>
+        </figure>
+        <div class="header-divider"></div>
+        <nav>
+          <ul>
+            <li><a href="faq/index.html">FAQ</a></li>
+            <li><a href="about/index.html">About</a></li>
+          </ul>
+       </nav>
+      </div>
+    </header>
 
   <main>
-    <div class="content">
+
+    <section class="hero-area">
       <div class="content-wrapper">
-        <h4>Hey there!</h4>
-        <p>Come on in, grab a drink, and make yourself at home.
-          If you are already a fan of Bob Wilber, then his music needs no introduction. If you’re not, then please have a look around, read a few articles, listen to some music, and enjoy the relaxed sophistication of Bob's recordings and compositions.
-          This site is a work in progress, so if something isn’t up and running yet, please be patient. We will add more content when time and availability allow. If you have photos or memorabilia of Bob, and would like to send them to us for consideration, please get in touch via the contact page.</p>
+        <h1> Retreat from the desk, return refreshed.</h1>
       </div>
-    </div>
+    </section>
+
+    <aside>
+      <div class="content-wrapper">
+        <div class="form-description">
+          <h3>Want to join the next retreat?</h3>
+          <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+        </div>
+        <div class="form">
+          <h3>Find out more</h3>
+          <input type="text" name="name" value="name@email.com" />
+          <input type="button" value="Download Intinerary" />
+        </div>
+      </div>
+    </aside>
+
+    <section class="features">
+      <div class="content-wrapper">
+        <h3>Have the work week you always dreamed of - without the bad wifi.</h3>
+          <div class="features-items">
+            <article>
+              <p class="fontawesome-icon"><i class="fas fa-campground"></i>
+              </p>
+              <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+            </article>
+            <article>
+              <p class="fontawesome-icon"><i class="fas fa-bed"></i>
+              </p>
+              <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
+            </article>
+            <article>
+              <p class="fontawesome-icon"><i class="fas fa-utensils"></i>
+              </p>
+              <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
+            </article>
+            <article>
+              <p class="fontawesome-icon"><i class="fas fa-shoe-prints"></i>
+              </p>
+              <p class="features-item-description">5 outdoor obstacle courses, including private beach 12 mile from bungalow.</p>
+            </article>
+            <article>
+              <p class="fontawesome-icon"><i class="fas fa-smile"></i>
+              </p>
+              <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
+            </article>
+            <article>
+              <p class="fontawesome-icon"><i class="fas fa-wifi"></i>
+              </p>
+              <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
+            </article>
+          </div>
+      </div>
+    </section>
+
+    <section class="reviews">
+      <div class="content-wrapper">
+        <h2>Be a better team in 5 days, like these.</h2>
+        <article>
+          <figure>
+            <img src="img/omar-lopez-296944-unsplash.jpg" alt="Previous retreat group together" />
+          </figure>
+          <div>
+            <h3>LaCrue Bottling Co. October 2018</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+          </div>
+        </article>
+      </div>
+    </section>
+
   </main>
 
   <footer>
     <div class="content-wrapper">
-      <h4 class="contact">
-        Contact us here
-      </h4>
-      <p>Policies</p>
-      <div class="copyright">
-        <p><a href="http://nikpayton.tech" target="_blank">Copyright 2022 | Nik Payton</a></p>
-      </div>
+      <div class="footer-content">
+        <div class="contact">
+          <h4>Contact</h4>
+          <address>
+            <p>555-555-5555<br />
+            hello@unplugged.com</p>
+          </address>
+        </div>
+        <div class="social">
+          <h4>Social</h4>
+          <div class="social-icons">
+            <p>
+              <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
+            </p>
+            <p>
+              <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
+            </p>
+            <p>
+              <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+            </p>
+          </div>
+        </div>
+      </div> <!-- footer content ends -->
+    </div>
+    <!-- footer content-wrapper ends -->
+    <div class="copyright">
+      <p>Copyright 2021 | Unplugged</p>
     </div>
   </footer>
+
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
@@ -71,7 +160,7 @@
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
     window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview');
+    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
