Imported Bob and Sidney images for hero-area. Started adding header titles and main h1. Changed body background, header and footer colours

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Unplugged | Home</title>
+  <title>Bob Wilber | Home</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -30,14 +30,16 @@
 
     <header>
       <div class="content-wrapper">
-        <figure>
-          <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo" /></a>
-        </figure>
         <div class="header-divider"></div>
         <nav>
           <ul>
-            <li><a href="faq/index.html">FAQ</a></li>
-            <li><a href="about/index.html">About</a></li>
+            <li><a href="about/index.html">FAQ</a></li>
+            <li><a href="listening/index.html">Listening</a></li>
+            <li><a href="videos/index.html">Videos</a></li>
+            <li><a href="interviews/index.html">Interviews</a></li>
+            <li><a href="articles/index.html">Articles</a></li>
+            <li><a href="stories/index.html">Stories</a></li>
+            <li><a href="contact/index.html">Contact</a></li>
           </ul>
        </nav>
       </div>
@@ -47,7 +49,8 @@
 
     <section class="hero-area">
       <div class="content-wrapper">
-        <h1> Retreat from the desk, return refreshed.</h1>
+        <h1> Bob Wilber</h1>
+        <h3>The life and music of Bob Wilber</h3>
       </div>
     </section>
 
