--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
 
     <header>
       <div class="content-wrapper">
+        <h3><a href="index.html">Bob Wilber</a></h3>
         <div class="header-divider"></div>
-        <nav>
-          <ul>
+        <nav id="navbar">
+          <ul class="navigation">
             <li><a href="about/index.html">FAQ</a></li>
             <li><a href="listening/index.html">Listening</a></li>
             <li><a href="videos/index.html">Videos</a></li>
@@ -54,70 +55,18 @@
       </div>
     </section>
 
-    <aside>
-      <div class="content-wrapper">
-        <div class="form-description">
-          <h3>Want to join the next retreat?</h3>
-          <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
-        </div>
-        <div class="form">
-          <h3>Find out more</h3>
-          <input type="text" name="name" value="name@email.com" />
-          <input type="button" value="Download Intinerary" />
-        </div>
-      </div>
-    </aside>
-
     <section class="features">
       <div class="content-wrapper">
-        <h3>Have the work week you always dreamed of - without the bad wifi.</h3>
-          <div class="features-items">
-            <article>
-              <p class="fontawesome-icon"><i class="fas fa-campground"></i>
-              </p>
-              <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
-            </article>
-            <article>
-              <p class="fontawesome-icon"><i class="fas fa-bed"></i>
-              </p>
-              <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
-            </article>
-            <article>
-              <p class="fontawesome-icon"><i class="fas fa-utensils"></i>
-              </p>
-              <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
-            </article>
-            <article>
-              <p class="fontawesome-icon"><i class="fas fa-shoe-prints"></i>
-              </p>
-              <p class="features-item-description">5 outdoor obstacle courses, including private beach 12 mile from bungalow.</p>
-            </article>
-            <article>
-              <p class="fontawesome-icon"><i class="fas fa-smile"></i>
-              </p>
-              <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
-            </article>
-            <article>
-              <p class="fontawesome-icon"><i class="fas fa-wifi"></i>
-              </p>
-              <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
-            </article>
+        <h3>Hey there!</h3>
+          <div class="welcome">
+            <p>Come on in, grab a drink, and make yourself at home.</p>
+            <p>If you are already a fan of Bob Wilber, then his music needs no introduction. If you’re not, then please have a look around, read a few articles, listen to some music, and enjoy the relaxed sophistication of Bobs recordings and compositions.</p>
           </div>
       </div>
     </section>
 
-    <section class="reviews">
+    <section class="hero-two">
       <div class="content-wrapper">
-        <h2>Be a better team in 5 days, like these.</h2>
-        <article>
-          <figure>
-            <img src="img/omar-lopez-296944-unsplash.jpg" alt="Previous retreat group together" />
-          </figure>
-          <div>
-            <h3>LaCrue Bottling Co. October 2018</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-          </div>
-        </article>
       </div>
     </section>
 
