Created .title to go over the hero picture, increased margin and width for content-wrapper and padding for hero h2. Changed header background colour and reduced padding.

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
       <div class="content-wrapper">
         <h3><a href="index.html">Bob Wilber</a></h3>
         <div class="header-divider"></div>
-        <nav id="navbar">
+        <nav>
           <ul class="navigation">
-            <li><a href="about/index.html">FAQ</a></li>
-            <li><a href="listening/index.html">Listening</a></li>
-            <li><a href="videos/index.html">Videos</a></li>
-            <li><a href="interviews/index.html">Interviews</a></li>
-            <li><a href="articles/index.html">Articles</a></li>
-            <li><a href="stories/index.html">Stories</a></li>
+            <li><a href="bio/index.html">Biography</a></li>
+            <li><a href="listening/index.html">Media</a></li>
+            <!-- <li><a href="videos/index.html">Videos</a></li> -->
+            <!-- <li><a href="interviews/index.html">Interviews</a></li> -->
+            <!-- <li><a href="articles/index.html">Articles</a></li> -->
+            <li><a href="stories/index.html">Writings</a></li>
             <li><a href="contact/index.html">Contact</a></li>
           </ul>
        </nav>
@@ -50,14 +50,16 @@
 
     <section class="hero-area">
       <div class="content-wrapper">
-        <h1> Bob Wilber</h1>
-        <h3>The life and music of Bob Wilber</h3>
+        <div class="title">
+          <h1> Bob Wilber</h1>
+          <h3>The life and music of Bob Wilber</h3>
+        </div>
       </div>
     </section>
 
     <section class="features">
       <div class="content-wrapper">
-        <h3>Hey there!</h3>
+        <h2>Hey there!</h2>
           <div class="welcome">
             <p>Come on in, grab a drink, and make yourself at home.</p>
             <p>If you are already a fan of Bob Wilber, then his music needs no introduction. If you’re not, then please have a look around, read a few articles, listen to some music, and enjoy the relaxed sophistication of Bobs recordings and compositions.</p>
@@ -100,7 +102,7 @@
     </div>
     <!-- footer content-wrapper ends -->
     <div class="copyright">
-      <p>Copyright 2021 | Unplugged</p>
+      <p>Copyright 2022 | Nik Payton</p>
     </div>
   </footer>
 
