Increased footer content-wrapper to 100%. Corrected grammar error in welcome text.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <h2>Hey there!</h2>
           <div class="welcome">
             <p>Come on in, grab a drink, and make yourself at home.</p>
-            <p>If you are already a fan of Bob Wilber, then his music needs no introduction. If you’re not, then please have a look around, read a few articles, listen to some music, and enjoy the relaxed sophistication of Bobs recordings and compositions.</p>
+            <p>If you are already a fan of Bob Wilber, then his music needs no introduction. If you’re not, then please have a look around, read a few articles, listen to some music, and enjoy the relaxed sophistication of Bob's recordings and compositions.</p>
           </div>
       </div>
     </section>
