Added navbar id in html. Added navbar.sticky in css with dark background and gold text, and corresponding JS code.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="content-wrapper">
         <h3><a href="index.html">Bob Wilber</a></h3>
         <div class="header-divider"></div>
-        <nav>
+        <nav id="navbar">
           <ul class="navigation">
             <li><a href="bio/index.html">Biography</a></li>
             <li><a href="listening/index.html">Media</a></li>
