Changed features class to welcome-area. Added p class for welcome-text. Aligned text to left.

--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
       </div>
     </section>
 
-    <section class="features">
+    <section class="welcome-area">
       <div class="content-wrapper">
         <h2>Hey there!</h2>
           <div class="welcome">
-            <p>Come on in, grab a drink, and make yourself at home.</p>
-            <p>If you are already a fan of Bob Wilber, then his music needs no introduction. If you’re not, then please have a look around, read a few articles, listen to some music, and enjoy the relaxed sophistication of Bob's recordings and compositions.</p>
+            <p class="welcome-text">Come on in, grab a drink, and make yourself at home.</p>
+            <p class="welcome-text">If you are already a fan of Bob Wilber, then his music needs no introduction. If you’re not, then please have a look around, read a few articles, listen to some music, and enjoy the relaxed sophistication of Bob's recordings and compositions.</p>
           </div>
       </div>
     </section>
