Changed Hey There to h2 and removed padding. Changed margin on header-divider. Added contact text and email link.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <header>
       <div class="content-wrapper">
-        <h3><a href="index.html">Bob Wilber</a></h3>
+        <h2><a href="index.html">Bob Wilber</a></h2>
         <div class="header-divider"></div>
         <nav id="navbar">
           <ul class="navigation">
@@ -80,11 +80,16 @@
         <div class="contact">
           <h4>Contact</h4>
           <address>
-            <p>555-555-5555<br />
-            hello@unplugged.com</p>
+            <p>If you'd like more info on Bob, please get in touch.</p>
+            <p>Do you have any stories of Bob that you'd like to share?</p>
+            <p>Or photos that you've taken on his gigs?</p>
+            <p>The please get in touch, we'd love to hear from you!</p>
+          </address>
+          <address>
+            <a href="mailto:me@bobwilber.co.uk">me at bobwilber.co.uk</a>
           </address>
         </div>
-        <div class="social">
+        <!-- <div class="social">
           <h4>Social</h4>
           <div class="social-icons">
             <p>
@@ -97,12 +102,12 @@
               <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
             </p>
           </div>
-        </div>
+        </div> -->
       </div> <!-- footer content ends -->
     </div>
     <!-- footer content-wrapper ends -->
     <div class="copyright">
-      <p>Copyright 2022 | Nik Payton</p>
+      <p><a href="https://nikpayton.tech" target="_blank">Copyright 2022 | Nik Payton</a></p>
     </div>
   </footer>
 
