Started added internal page links. For some reason they're not linking, and I can't remember why. Not enough coffee?

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
         <div class="header-divider"></div>
         <nav id="navbar">
           <ul class="navigation">
-            <li><a href="bio/index.html">Biography</a></li>
-            <li><a href="listening/index.html">Media</a></li>
+            <li><a href="/bio/index.html">Biography</a></li>
+            <li><a href="/music/index.html">Media</a></li>
             <!-- <li><a href="videos/index.html">Videos</a></li> -->
             <!-- <li><a href="interviews/index.html">Interviews</a></li> -->
             <!-- <li><a href="articles/index.html">Articles</a></li> -->
-            <li><a href="stories/index.html">Writings</a></li>
-            <li><a href="contact/index.html">Contact</a></li>
+            <li><a href="/articles/index.html">Writings</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
        </nav>
       </div>
@@ -74,10 +74,10 @@
 
   </main>
 
-  <footer>
+  <footer id="contact">
     <div class="content-wrapper">
       <div class="footer-content">
-        <div class="contact">
+        <div class="contact-info">
           <h4>Contact</h4>
           <address>
             <p class="welcome-text">Do you have any stories of Bob that you'd like to share?</p>
