--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
         <div class="header-divider"></div>
         <nav id="navbar">
           <ul class="navigation">
-            <li><a href="/bio/index.html">Biography</a></li>
-            <li><a href="/music/index.html">Media</a></li>
+            <li><a href="bio/index.html">Biography</a></li>
+            <li><a href="music/index.html">Media</a></li>
             <!-- <li><a href="videos/index.html">Videos</a></li> -->
             <!-- <li><a href="interviews/index.html">Interviews</a></li> -->
             <!-- <li><a href="articles/index.html">Articles</a></li> -->
-            <li><a href="/articles/index.html">Writings</a></li>
+            <li><a href="articles/index.html">Writings</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
        </nav>
