Modified pages to keep basic format from original index page. Added css link to heads.

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <p class="welcome-text">Then please get in touch, we'd love to hear from you!</p>
           </address>
           <address>
-            <a href="mailto:me@bobwilber.co.uk">me at bobwilber.co.uk</a>
+            <a href="mailto:admin@bobwilber.co.uk">admin at bobwilber.co.uk</a>
           </address>
         </div>
         <!-- <div class="social">
